# datakit

./: .gitignore  LICENSE  VERSION  __init__.py  build-acutevis.py  config.py  datamodel.py  dataset.py  discover.py  experiment.py  inventory.py  loader.py  pipeline.py  pyproject.toml  testing.py
datakit/: __init__.py  __main__.py  alignment.py  config.py  discover.py  experiment.py  inventory.py  loader.py  timeline.py
datakit/_utils/: _logger.py
datakit/analysis/: hilbert.py
datakit/docs/: dataset_structure.md
datakit/scripts/: _inspect_psychopy_windows.py  debug_treadmill_alignment.py  inspect_pupil-dlc_trace.py  replot_treadmill_debug.py
datakit/sources/: __init__.py  register.py
docs/: data_sources.md  dataset_structure.md
notebooks/: pupil_dlc.ipynb
scripts/: inspect_pupil_dlc_h5.py  mesomap_fixture_hover.py
scripts/build-datasets/: build-ETOH-R01.py  build-acutevis.py
scripts/plot/: plot_pupil_treadmill_overlay.py  plot_ses_gratings_pupil_encoder_overlay.py  plot_ses_gratings_roi.py  plot_ses_gratings_roi_pupil_encoder.py  plot_suite2p_psychopy_overlay.py
sources/: __init__.py  register.py  specs.py
sources/analysis/: mesomap.py  pupil.py
sources/behavior/: dataqueue.py  psychopy.py  treadmill.py  wheel.py
sources/camera/: mesoscope.py  pupil.py  suite2p.py  suite2pV2.py
sources/session/: config.py  (+1 more)
tests/: README.md  plot_psychopy_gratings_suite2p.py  test_dataqueue_timelines.py  test_experiment_multi_dir.py  test_mesomap_loader.py  test_pupil_metadata_missing_key.py  test_treadmill_dataqueue_packets.py  test_treadmill_no_timeline.py
(+31 files in other folders)
